examples/test/testpolicy13808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13808
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key16: value5
      key39: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value22
          key18: value23
      podSelector:
        matchLabels:
          key49: value45
          key1: value49
          key18: value4
